--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,43 @@ html {
 :root {
   --spacing: 1rem;
   --max-width: 56rem;
+
   --font-size-button: 1rem;
-  --font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --font-family: -system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
   --color-light-gray: #f5f5f5;
-  --color-background-code: var(--color-light-gray);
+  --color-background-zebra: var(--color-light-gray);
+}
+
+.hidden {
+  /* Viljum að þetta feli alltaf element, notum því !important */
+  display: none !important;
+}
+
+html {
+  font-family: var(--font-family);
+  padding: var(--spacing);
+}
+
+input,
+textarea,
+button {
+  font-size: inherit;
+}
+
+button {
+  padding: 0.25rem 0.5rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing);
+
+  margin: var(--spacing) auto;
+  padding-inline: var(--spacing);
+  max-width: var(--max-width);
 }
 
 /*# sourceMappingURL=styles.css.map */
