--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,38 @@ footer {
   text-align: center;
   padding: var(--spacing) calc(var(--spacing) * 1.5);
 }
+
+@media (min-width: 768px) {
+  :root {
+    --spacing: 1.5rem; 
+  }
+
+  #root {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  button {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  :root {
+    --base-font-size: 18px; 
+    --spacing: 2rem;
+    --max-width: 1600px;
+  }
+
+  #root {
+    padding-inline: calc(var(--spacing) * 2);
+  }
+
+  header {
+    padding: calc(var(--spacing) * 1.5) calc(var(--spacing) * 2);
+  }
+
+  footer {
+    padding: calc(var(--spacing) * 1.5) calc(var(--spacing) * 2);
+  }
+}
