--- a/styles.css
+++ b/styles.css
@@ -5,25 +5,24 @@
 
 html {
   box-sizing: border-box;
+  font-family: var(--font-family);
+  padding: var(--spacing);
 }
 
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
 :root {
   --spacing: 1rem;
   --max-width: 1200px;
-
   --font-size-button: 1rem;
-  --font-family: -system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+  --font-family: -system-ui, -apple-system, blinkmacsystemfont, "Segoe UI",
+    roboto, oxygen, ubuntu, cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --color-light-gray: #f5f5f5;
   --color-background-zebra: var(--color-light-gray);
-
   --border-regular: 1px solid #000;
   --border-width: 1px;
   --border-radius-regular: 5px;
@@ -32,11 +31,6 @@ html {
 .hidden {
   /* Viljum að þetta feli alltaf element, notum því !important */
   display: none !important;
-}
-
-html {
-  font-family: var(--font-family);
-  padding: var(--spacing);
 }
 
 input,
@@ -51,12 +45,9 @@ button {
   border: var(--border-regular);
   border-radius: var(--border-radius-regular);
   border-width: var(--border-width);
-
-
   font-size: 1rem;
   text-decoration: none;
   background-color: #f5f5f5;
-
 }
 
 main {
@@ -64,21 +55,20 @@ main {
   flex-direction: column;
   gap: var(--spacing);
   align-items: center;
-
   margin: var(--spacing) auto;
   padding-inline: var(--spacing);
   max-width: var(--max-width);
 }
 
-.keywordsWrapper > div {
+.keywords-wrapper > div {
   padding: var(--spacing);
 }
 
-.contentWrapper > section {
+.content-wrapper > section {
   padding: var(--spacing);
 }
 
-.contentWrapper > section > div {
+.content-wrapper > section > div {
   padding: var(--spacing) 0;
 }
 
@@ -105,7 +95,6 @@ nav ul {
   flex-wrap: wrap;
   justify-content: center;
   gap: var(--spacing);
-
   list-style: none;
 }
 
