--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ button {
 
 }
 
-#root {
+main {
   display: flex;
   flex-direction: column;
   gap: var(--spacing);
@@ -68,9 +68,20 @@ button {
   margin: var(--spacing) auto;
   padding-inline: var(--spacing);
   max-width: var(--max-width);
+  position: relative; 
+}
+
+h2{ 
+  align-self: center; 
+  margin-top: var(--spacing); 
+  text-align: center; 
 }
 
 .keywordsWrapper > div {
+  padding: var(--spacing);
+}
+
+.questionsWrapper > div {
   padding: var(--spacing);
 }
 
@@ -113,6 +124,11 @@ nav ul li {
   margin-bottom: calc(var(--spacing) / 2);
   text-align: left;
 }
+.questionItem ul li {
+  display: flex;
+  gap: var(--spacing);
+  margin:calc(var(--spacing) / 2);
+}
 
 footer {
   text-align: center;
@@ -124,8 +140,8 @@ footer {
     --spacing: 1.5rem; 
   }
 
-  #root {
-    flex-direction: row;
+  main {
+    flex-direction: column;
     justify-content: center;
   }
 
@@ -141,7 +157,7 @@ footer {
     --max-width: 1600px;
   }
 
-  #root {
+  main {
     padding-inline: calc(var(--spacing) * 2);
   }
 
