--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,13 @@
 
 html {
   box-sizing: border-box;
+  font-family: var(--font-family);
+  padding: var(--spacing);
 }
 
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -17,8 +19,8 @@ html {
   --spacing: 1rem;
   --max-width: 1200px;
   --font-size-button: 1rem;
-  --font-family: -system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --font-family: -system-ui, -apple-system, blinkmacsystemfont, "Segoe UI",
+    roboto, oxygen, ubuntu, cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --border-width: 1px;
   --border-radius-regular: 5px;
 }
@@ -26,11 +28,6 @@ html {
 .hidden {
   /* Viljum að þetta feli alltaf element, notum því !important */
   display: none !important;
-}
-
-html {
-  font-family: var(--font-family);
-  padding: var(--spacing);
 }
 
 input,
@@ -44,7 +41,6 @@ button {
   padding: calc(var(--spacing) * 0.5) var(--spacing);
   border-radius: var(--border-radius-regular);
   border-width: var(--border-width);
-
   font-size: 1rem;
   text-decoration: none;
   background-color: #f5f5f5;
@@ -55,31 +51,31 @@ main {
   flex-direction: column;
   gap: var(--spacing);
   align-items: center;
-
   margin: var(--spacing) auto;
   padding-inline: var(--spacing);
   max-width: var(--max-width);
-  position: relative; 
+  position: relative;
 }
 
-h2{ 
-  align-self: center; 
-  margin-top: var(--spacing); 
-  text-align: center; 
+h2 {
+  align-self: center;
+  margin-top: var(--spacing);
+  text-align: center;
 }
 
-.keywordsWrapper > div {
+.keywords-wrapper > div {
   padding: var(--spacing);
 }
-.questionsWrapper > div {
+
+.questions-wrapper > div {
   padding: var(--spacing);
 }
 
 .content-wrapper > section {
-  padding: var(--spacing);
+  padding: calc(var(--spacing) * 0.5);
 }
 
-.lecturesWrapper {
+.lectures-wrapper {
   display: flex;
   flex-direction: column;
   gap: var(--spacing);
@@ -88,28 +84,23 @@ h2{
   padding: var(--spacing);
 }
 
-
-.lectureItem {
+.lecture-item {
   padding: calc(var(--spacing) * 1);
   border-radius: var(--border-radius-regular);
   margin-bottom: calc(var(--spacing) * 0.75);
 }
 
-.lectureItem h3 {
+.lecture-item h3 {
   margin-bottom: calc(var(--spacing) * 0.5);
   font-size: 1.5rem;
 }
 
-.lectureItem p {
+.lecture-item p {
   line-height: 1.4;
   margin-bottom: calc(var(--spacing) * 0.5);
 }
 
-.contentWrapper > section {
-  padding: calc(var(--spacing) * 0.5);
-}
-
-.contentWrapper > section > div {
+.content-wrapper > section > div {
   padding: calc(var(--spacing) * 0.25) 0;
 }
 
@@ -136,7 +127,6 @@ nav ul {
   flex-wrap: wrap;
   justify-content: center;
   gap: var(--spacing);
-
   list-style: none;
 }
 
@@ -145,10 +135,11 @@ nav ul li {
   text-align: left;
   list-style: none;
 }
-.questionItem ul li {
+
+.question-item ul li {
   display: flex;
   gap: var(--spacing);
-  margin:calc(var(--spacing) / 2);
+  margin: calc(var(--spacing) / 2);
 }
 
 footer {
@@ -156,9 +147,9 @@ footer {
   padding: var(--spacing) calc(var(--spacing) * 1.5);
 }
 
-@media (min-width: 768px) {
+@media (min-width >= 768px) {
   :root {
-    --spacing: 1.5rem; 
+    --spacing: 1.5rem;
   }
 
   main {
@@ -171,9 +162,9 @@ footer {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width >= 1200px) {
   :root {
-    --base-font-size: 18px; 
+    --base-font-size: 18px;
     --spacing: 2rem;
     --max-width: 1600px;
   }
@@ -190,4 +181,3 @@ footer {
     padding: calc(var(--spacing) * 1.5) calc(var(--spacing) * 2);
   }
 }
-
